--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,51 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   "true": "foo"
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
+  send_instructions: "Send me reset password instructions"
+  waiting_info: "Currently waiting confirmation for:"
+  cancel_acc: "Cancel my account"
+  unhappy: "Unhappy?"
+  delete_acc: "Delete my account"
+  update: "Update"
+  characters_minimum: "characters minimum"
+  are_you_sure: "Are you sure?"
   hello: "Hello world"
+  errors: 
+    one:  "There is %{count} error in your form"
+    few:  "There are %{count} errors in your form"
+    many: "There are %{count} errors in your form"
+  app:
+    name: "Events for Friends"
+    company: "Leonid Traikovskii && Goodprogrammer"
+  views:
+    navi:
+      sign_in: "Sign in"
+      sign_up: "Sign up"
+      sign_out: "Sign out"
+      view_profile: "View profile"
+    form:
+      save: "Save"
+      back: "Back"
+      or: "or"
+      leave_blank: "(leave blank if you don't want to change it)"
+      need_password: "(we need your current password to confirm your changes)"
+    users:
+      editing: "Editing user"
+      users: "Users"
+      new_user: "New user"
+      no_events: "User did not organize any event yet"
+      user_events: "Organized events"
+      edit_profile: "Edit profile"
+      edit_password: "Change password"
+      edit_data: "Edit users data"
+      show: "Show this user"
+    events:
+      editing: "Editing event"
+      start: "Start a New event!"
+      events: "Events"
+      new_event: "New Event"
+      change: "Change event"
+      delete: "Delete event"
+    links:
+      forgot: "Forgot your password?"
+      didnt_conf_instr: "Didn't receive confirmation instructions?"
+      didnt_unlock_instr: "Didn't receive unlock instructions?"
+      sign_in_with: "Sign in with "
