--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,5 @@
 ru:
+  send: "Отправить"
   send_instructions: "Отправить инструкцию по восстановлению пароля"
   waiting_info: "Ожидаем подтверждения от:"
   cancel_acc: "Удалить страничку навсегда!"
@@ -7,6 +8,7 @@ ru:
   update: "Запомнить изменения"
   characters_minimum: "символов минимум"
   are_you_sure: "Вы уверены?"
+  error: "Что-то пошло не так..."
   activerecord:
     models:
       user: "Пользователь"
@@ -29,6 +31,14 @@ ru:
       destroyed: "Событие удалено!"
     users:
       updated: "Данные вашего профиля обновлены!"
+    comments: 
+      error: "Не удалось откомментировать"
+      created: "Комментарий добавлен"
+      destroyed: "Комментарий удалён"
+    subscriptions:
+      created: "Подписка оформлена!"
+      destroyed: "Пользователь отписан от события"
+      error: "Подписка/Отписка не сработала"
   errors:
     one:  "В вашей форме %{count} ошибка"
     few:  "В вашей форме %{count} ошибки"
