--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,6 @@
 ru:
+  event_host: "Организатор мероприятия:"
+  event_guests: "Посетители:"
   send: "Отправить"
   send_instructions: "Отправить инструкцию по восстановлению пароля"
   waiting_info: "Ожидаем подтверждения от:"
@@ -31,11 +33,16 @@ ru:
       destroyed: "Событие удалено!"
     users:
       updated: "Данные вашего профиля обновлены!"
-    comments: 
+    comments:
+      to_comment: "Прокомментировать:"
+      post_comment: "Отправить комментарий"
+      delete_comment: "Удалить этот комментарий?"
       error: "Не удалось откомментировать"
       created: "Комментарий добавлен"
       destroyed: "Комментарий удалён"
     subscriptions:
+      subscribe: "Подписаться!"
+      unsubscribe: "Не пойду!"
       created: "Подписка оформлена!"
       destroyed: "Пользователь отписан от события"
       error: "Подписка/Отписка не сработала"
